<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>real_leo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sfr2023@todo.todo">sfr2023</maintainer>
  <license>TODO: License declaration</license>

  <depend>robot_localization</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>slam_gmapping</depend>
  <depend>map_server</depend>
  <depend>amcl</depend>
  <depend>move_base</depend>
  <depend>global_planner</depend>
  <depend>twist_mux</depend>
  <depend>gmapping</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
